--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^1.12.2",
     "dotenv": "^17.2.2",
+    "lucide-react": "^0.553.0",
     "node-fetch": "^2.7.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
@@ -42,5 +43,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18"
   }
 }
