--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-fetch": "^2.7.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-joyride": "^2.9.3",
     "react-lucid": "^0.0.1",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
